# ssp-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile.sh  configure.sh  run.sh
BRDFExecutor/: BRDFExecutor.cpp  CMakeLists.txt
PrinterExecutor/: Printer.cpp
RaytracerExecutor/: CMakeLists.txt
TaskSystem/: CMakeLists.txt  TaskSystem.cpp  TaskSystem.h  Utils.hpp  Window.hpp  main.cpp
